Development: Update modernizer to 1.14.0 and fix violations (#12969)